# UnitTests

./: .gitignore  CMakeLists.txt  README.md  UnitTests.qdocconf
include/src/app/: main.h  temp.hpp
include/test/: main.h
lib/: CMakeLists.txt
lib/closer/: CMakeLists.txt
lib/closer/include/src/caller/: caller.h
lib/closer/include/test/caller/: caller.h
lib/closer/src/caller/: caller.cpp
lib/closer/test/: CMakeLists.txt
lib/closer/test/caller/: CMakeLists.txt  caller.cpp
lib/greeter/: CMakeLists.txt
lib/greeter/include/src/generator/: generator.h
lib/greeter/include/test/generator/: generator.h
lib/greeter/src/generator/: generator.cpp
lib/greeter/test/: CMakeLists.txt
lib/greeter/test/generator/: CMakeLists.txt  generator.cpp
src/app/: main.cpp
src/tmp/: tmp.cpp
test/: CMakeLists.txt
test/ui/pages/main/: CMakeLists.txt
test/ui/pages/main/qml/: tst_main.qml
test/ui/pages/main/src/: main.cpp
ui/: CMakeLists.txt
ui/pages/: HelloWorld.qml
ui/windows/: main.qml
util/: utilities.cmake
