cmake_minimum_required(VERSION 3.23)

project(libraries)

include(../util/utilities.cmake)

GET_LIBRARIES(${CMAKE_CURRENT_SOURCE_DIR})

set(LIB_LIBRARIES ${LIBRARIES} PARENT_SCOPE)
set(LIB_INCLUDE_DIRS ${LIBRARIES_INCLUDE_DIRS} PARENT_SCOPE)

foreach(LIBRARY ${LIBRARIES})
    add_subdirectory(${LIBRARY})
    find_library(${LIBRARY}_LIBRARY NAMES ${LIBRARY} PATHS ${CMAKE_CURRENT_BINARY_DIR}/${LIBRARY})
    list(APPEND LIB_LIBRARIES ${${LIBRARY}_LIBRARY})
    list(APPEND LIB_INCLUDE_DIRS ${${LIBRARY}_INCLUDE_DIRS})
endforeach(LIBRARY ${LIBRARIES})
